# l8zk

./: .eslintrc.json  .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.cjs.json  tsconfig.esm.json  tsconfig.json  tsconfig.types.json  vitest.config.ts
.github/workflows/: build-binaries.yml  ci.yml
examples/age-verification/: index.ts
examples/crypto-onboarding/: index.ts
examples/eu-residency/: index.ts
examples/full-demo/: index.ts
scripts/: test-basic-usage.ts  test-e2e.ts
src/: errors.ts  index.ts  openac.ts  types.ts
src/credential/: index.ts  parser.ts
src/native/: index.ts
src/prover/: backend.ts  circuit-inputs.ts  index.ts  native-backend.ts  prepare.ts  show.ts  verify.ts  wasm-loader.ts
src/storage/: adapter.ts  index.ts
src/utils/: base64.ts  circom-downloader.ts  crypto.ts  index.ts
tests/: credential.test.ts  e2e.test.ts  integration.test.ts  native-backend.test.ts  native-prover.test.ts  storage.test.ts  verify.test.ts
wallet-unit-poc/: .gitignore
wallet-unit-poc/paper/: .gitignore  AC_and_EUDI.tex  BBSp.tex  abstract.tex  ac_framework.tex  (+18 more)
wallet-unit-poc/wallet-unit-poc/ecdsa-spartan2/: .gitignore  Cargo.toml  README.md  build.rs
wallet-unit-poc/wallet-unit-poc/ecdsa-spartan2/logs/: 1920_bytes  1kb  2kb  3kb  4kb  5kb  6kb  7kb  8kb
wallet-unit-poc/wallet-unit-poc/ecdsa-spartan2/src/: lib.rs  main.rs  prover.rs  setup.rs  utils.rs
wallet-unit-poc/wallet-unit-poc/ecdsa-spartan2/src/circuits/: mod.rs  prepare_circuit.rs  show_circuit.rs
(+40 files in other folders)
