[package]
name = "ecdsa-spartan2"
version = "0.0.1"
edition = "2021"

[lib]
name = "ecdsa_spartan2"
path = "src/lib.rs"

[[bin]]
name = "ecdsa-spartan2"
path = "src/main.rs"

[dependencies]
circom-scotia = "0.2.0"
spartan2 = { git = "https://github.com/therealyingtong/Spartan2.git", branch = "zk", default-features = false }
bellpepper = "0.4.0"
bellpepper-core = "0.4.0"
ff = { version = "0.13.0", features = ["derive"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "time"] }
sha2 = "0.10.7"
bincode = "1.3.3"
memmap2 = "0.9.8"
rust-witness = "0.1.6"
base64 = "0.22"

[build-dependencies]
rust-witness = "0.1.6"

[profile.release]
debug = true
